submission/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'integer'", 
                     "'float'", "'string'", "'boolean'", "'array'", "'auto'", 
                     "'of'", "'inherit'", "'void'", "'return'", "'function'", 
                     "'if'", "'else'", "'while'", "'for'", "'do'", "'break'", 
                     "'continue'", "'+'", "'-'", "'/'", "'*'", "'%'", "'!='", 
                     "'=='", "'&&'", "'||'", "'!'", "'<'", "'<='", "'>'", 
                     "'>='", "'::'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'='", "':'", "','", "';'", "'.'" ]

    symbolicNames = [ "<INVALID>", "BLOCKCOMMENT", "INLINECOMMENT", "INTEGER", 
                      "FLOAT", "STRING", "BOOLEAN", "ARRAY", "AUTO", "OF", 
                      "INHERIT", "VOID", "RETURN", "FUNCTION", "IF", "ELSE", 
                      "WHILE", "FOR", "DO", "BREAK", "CONTINUE", "ADD", 
                      "SUBSTRACT", "DIVIDE", "MULTIPLY", "MODULO", "NOTEQUAL", 
                      "EQUAL", "AND", "OR", "NOT", "LESS", "LEQ", "GREATER", 
                      "GEQ", "STRING_CONCAT", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", 
                      "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", "LEFT_CURLY_BRACKET", 
                      "RIGHT_CURLY_BRACKET", "ASSIGN", "COLON", "COMMA", 
                      "SEMI", "DOT", "IDENTIFIERS", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "BOOLIT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_atomic_type = 1
    RULE_function_type = 2
    RULE_include_auto_type = 3
    RULE_vardecl = 4
    RULE_vardecl_with_init = 5
    RULE_vardecl_no_init = 6
    RULE_list_of_ids = 7
    RULE_another_id_list = 8
    RULE_vardecl_array = 9
    RULE_dimensions = 10
    RULE_array_literal = 11
    RULE_expr_list = 12
    RULE_list_of_exprs = 13
    RULE_array_indexing = 14
    RULE_indexop_expr = 15
    RULE_funcdecl = 16
    RULE_function_prototype = 17
    RULE_function_body = 18
    RULE_func_params = 19
    RULE_paramlist = 20
    RULE_paramone = 21
    RULE_function_call = 22
    RULE_arg_list = 23
    RULE_arg_list_params = 24
    RULE_literal = 25
    RULE_sub_expr = 26
    RULE_expr = 27
    RULE_expr1 = 28
    RULE_expr2 = 29
    RULE_expr3 = 30
    RULE_expr4 = 31
    RULE_expr5 = 32
    RULE_expr6 = 33
    RULE_expr7 = 34
    RULE_stmt = 35
    RULE_noblock_stmt = 36
    RULE_assign_stmt = 37
    RULE_if_stmt = 38
    RULE_for_stmt = 39
    RULE_while_stmt = 40
    RULE_do_while_stmt = 41
    RULE_break_stmt = 42
    RULE_continue_stmt = 43
    RULE_return_stmt = 44
    RULE_call_stmt = 45
    RULE_block_stmt = 46

    ruleNames =  [ "program", "atomic_type", "function_type", "include_auto_type", 
                   "vardecl", "vardecl_with_init", "vardecl_no_init", "list_of_ids", 
                   "another_id_list", "vardecl_array", "dimensions", "array_literal", 
                   "expr_list", "list_of_exprs", "array_indexing", "indexop_expr", 
                   "funcdecl", "function_prototype", "function_body", "func_params", 
                   "paramlist", "paramone", "function_call", "arg_list", 
                   "arg_list_params", "literal", "sub_expr", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "stmt", "noblock_stmt", "assign_stmt", "if_stmt", "for_stmt", 
                   "while_stmt", "do_while_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "call_stmt", "block_stmt" ]

    EOF = Token.EOF
    BLOCKCOMMENT=1
    INLINECOMMENT=2
    INTEGER=3
    FLOAT=4
    STRING=5
    BOOLEAN=6
    ARRAY=7
    AUTO=8
    OF=9
    INHERIT=10
    VOID=11
    RETURN=12
    FUNCTION=13
    IF=14
    ELSE=15
    WHILE=16
    FOR=17
    DO=18
    BREAK=19
    CONTINUE=20
    ADD=21
    SUBSTRACT=22
    DIVIDE=23
    MULTIPLY=24
    MODULO=25
    NOTEQUAL=26
    EQUAL=27
    AND=28
    OR=29
    NOT=30
    LESS=31
    LEQ=32
    GREATER=33
    GEQ=34
    STRING_CONCAT=35
    LEFT_PARENTHESIS=36
    RIGHT_PARENTHESIS=37
    LEFT_SQUARE_BRACKET=38
    RIGHT_SQUARE_BRACKET=39
    LEFT_CURLY_BRACKET=40
    RIGHT_CURLY_BRACKET=41
    ASSIGN=42
    COLON=43
    COMMA=44
    SEMI=45
    DOT=46
    IDENTIFIERS=47
    INTLIT=48
    FLOATLIT=49
    STRINGLIT=50
    BOOLIT=51
    WS=52
    ERROR_CHAR=53
    UNCLOSE_STRING=54
    ILLEGAL_ESCAPE=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.VardeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.VardeclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FuncdeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 95
                    self.funcdecl()
                    pass


                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ARRAY or _la==MT22Parser.IDENTIFIERS):
                    break

            self.state = 100
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic_type" ):
                return visitor.visitAtomic_type(self)
            else:
                return visitor.visitChildren(self)




    def atomic_type(self):

        localctx = MT22Parser.Atomic_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_atomic_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.BOOLEAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_function_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_type" ):
                return visitor.visitFunction_type(self)
            else:
                return visitor.visitChildren(self)




    def function_type(self):

        localctx = MT22Parser.Function_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.AUTO) | (1 << MT22Parser.VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_auto_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_include_auto_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_auto_type" ):
                return visitor.visitInclude_auto_type(self)
            else:
                return visitor.visitChildren(self)




    def include_auto_type(self):

        localctx = MT22Parser.Include_auto_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include_auto_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.AUTO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def vardecl_with_init(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_with_initContext,0)


        def vardecl_no_init(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_no_initContext,0)


        def vardecl_array(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_arrayContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 108
                self.vardecl_with_init()
                pass

            elif la_ == 2:
                self.state = 109
                self.vardecl_no_init()
                pass

            elif la_ == 3:
                self.state = 110
                self.vardecl_array()
                pass


            self.state = 113
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_with_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIERS(self):
            return self.getToken(MT22Parser.IDENTIFIERS, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def vardecl_with_init(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_with_initContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def include_auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Include_auto_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_with_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_with_init" ):
                return visitor.visitVardecl_with_init(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_with_init(self):

        localctx = MT22Parser.Vardecl_with_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_with_init)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(MT22Parser.IDENTIFIERS)
                self.state = 116
                self.match(MT22Parser.COMMA)
                self.state = 117
                self.vardecl_with_init()
                self.state = 118
                self.match(MT22Parser.COMMA)
                self.state = 119
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(MT22Parser.IDENTIFIERS)
                self.state = 122
                self.match(MT22Parser.COLON)
                self.state = 123
                self.include_auto_type()
                self.state = 124
                self.match(MT22Parser.ASSIGN)
                self.state = 125
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_no_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_ids(self):
            return self.getTypedRuleContext(MT22Parser.List_of_idsContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def include_auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Include_auto_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_no_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_no_init" ):
                return visitor.visitVardecl_no_init(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_no_init(self):

        localctx = MT22Parser.Vardecl_no_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl_no_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.list_of_ids()
            self.state = 130
            self.match(MT22Parser.COLON)
            self.state = 131
            self.include_auto_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_idsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIERS(self):
            return self.getToken(MT22Parser.IDENTIFIERS, 0)

        def another_id_list(self):
            return self.getTypedRuleContext(MT22Parser.Another_id_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_list_of_ids

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_ids" ):
                return visitor.visitList_of_ids(self)
            else:
                return visitor.visitChildren(self)




    def list_of_ids(self):

        localctx = MT22Parser.List_of_idsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_of_ids)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.IDENTIFIERS)
                self.state = 134
                self.another_id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(MT22Parser.IDENTIFIERS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Another_id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def list_of_ids(self):
            return self.getTypedRuleContext(MT22Parser.List_of_idsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_another_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnother_id_list" ):
                return visitor.visitAnother_id_list(self)
            else:
                return visitor.visitChildren(self)




    def another_id_list(self):

        localctx = MT22Parser.Another_id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_another_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MT22Parser.COMMA)
            self.state = 139
            self.list_of_ids()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LEFT_SQUARE_BRACKET(self):
            return self.getToken(MT22Parser.LEFT_SQUARE_BRACKET, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def RIGHT_SQUARE_BRACKET(self):
            return self.getToken(MT22Parser.RIGHT_SQUARE_BRACKET, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_array" ):
                return visitor.visitVardecl_array(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_array(self):

        localctx = MT22Parser.Vardecl_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vardecl_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MT22Parser.ARRAY)
            self.state = 142
            self.match(MT22Parser.LEFT_SQUARE_BRACKET)
            self.state = 143
            self.dimensions()
            self.state = 144
            self.match(MT22Parser.RIGHT_SQUARE_BRACKET)
            self.state = 145
            self.match(MT22Parser.OF)
            self.state = 146
            self.atomic_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimensions" ):
                return visitor.visitDimensions(self)
            else:
                return visitor.visitChildren(self)




    def dimensions(self):

        localctx = MT22Parser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dimensions)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(MT22Parser.INTLIT)
                self.state = 149
                self.match(MT22Parser.COMMA)
                self.state = 150
                self.dimensions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'
